// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Listing Default listing item in 2 columns renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-2-col"
  >
    <h4
      class="fw-bold mb-4 ps-3"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="gy-4-5 row row-cols-1 row-cols-md-2 g-2"
    >
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-xl-3 col-md-5 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/160?random=5"
              />
            </div>
            <div
              class="col-xl-9 col-md-7"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="d-lg-inline d-block text-muted mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-xl-3 col-md-5 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/160?random=4"
              />
            </div>
            <div
              class="col-xl-9 col-md-7"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="d-lg-inline d-block text-muted mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-xl-3 col-md-5 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=3"
              />
            </div>
            <div
              class="col-xl-9 col-md-7"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  Title card
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="d-lg-inline d-block text-muted mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-xl-3 col-md-5 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=2"
              />
            </div>
            <div
              class="col-xl-9 col-md-7"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="d-lg-inline d-block text-muted mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-xl-3 col-md-5 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=1"
              />
            </div>
            <div
              class="col-xl-9 col-md-7"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="d-lg-inline d-block text-muted mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-xl-3 col-md-5 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=6"
              />
            </div>
            <div
              class="col-xl-9 col-md-7"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-lg-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="d-lg-inline d-block text-muted mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <a
      class="mt-3-5 d-block ps-3-5"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="ms-2-5 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing Default listing item in 3 columns renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-3-col"
  >
    <h4
      class="fw-bold mb-4 ps-3"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="gy-4-5 row-cols-md-2 row row-cols-1 row-cols-xl-3 g-2"
    >
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-4 col-md-6 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/160?random=5"
              />
            </div>
            <div
              class="col-lg-8 col-md-6"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class=" text-muted d-block mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-4 col-md-6 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top"
                src="https://picsum.photos/160?random=4"
              />
            </div>
            <div
              class="col-lg-8 col-md-6"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class=" text-muted d-block mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-4 col-md-6 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=3"
              />
            </div>
            <div
              class="col-lg-8 col-md-6"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  Title card
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class=" text-muted d-block mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-4 col-md-6 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=2"
              />
            </div>
            <div
              class="col-lg-8 col-md-6"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class=" text-muted d-block mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-4 col-md-6 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/160?random=1"
              />
            </div>
            <div
              class="col-lg-8 col-md-6"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class=" text-muted d-block mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-lg-4 col-md-6 mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1"
                src="https://picsum.photos/seed/1002/600/400"
              />
            </div>
            <div
              class="col-lg-8 col-md-6"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class=" text-muted d-block mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <a
      class="mt-3-5 d-block ps-3-5"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="ms-2-5 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing horizontal renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--default-1-col"
  >
    <h4
      class="fw-bold mb-4 ps-3"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="gy-4-5 row row-cols-1 g-2"
    >
      <div
        class="col"
      >
        <div
          class="listing-item px-3 mb-2 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1 mw-listing-img"
                src="https://picsum.photos/160?random=1"
              />
            </div>
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Card title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-md-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-md-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="d-md-inline d-block text-muted mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 mb-2 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1 mw-listing-img"
                src="https://picsum.photos/160?random=8"
              />
            </div>
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Article title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-md-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-md-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="d-md-inline d-block text-muted mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 mb-2 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1 mw-listing-img"
                src="https://picsum.photos/160?random=2"
              />
            </div>
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Article title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-md-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-md-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class=" text-muted d-md-inline d-block mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item px-3 mb-2 border-bottom border-md-0 border-0 card"
        >
          <div
            class="row"
          >
            <div
              class="col-md-3 col-lg-2 rounded mw-listing-img"
            >
              <img
                alt="alt img"
                class="card-img-top rounded-1 mw-listing-img"
                src="https://picsum.photos/160?random=3"
              />
            </div>
            <div
              class="col-md-9 col-lg-10"
            >
              <div
                class="card-body p-0 py-md-0 py-3"
              >
                <h5
                  class="card-title"
                >
                  <a
                    class="text-underline-hover"
                    href="/example"
                  >
                    Article title
                  </a>
                </h5>
                <p
                  class="card-text mb-3"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut ex tristique, dignissim sem ac, bibendum est. Sed vehicula lorem non nunc tincidunt hendrerit. Nunc tristique ante et fringilla fermentum.
                </p>
                <div>
                  <span
                    class="text-muted d-md-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Article
                  </span>
                  <span
                    class="text-muted d-md-inline d-block me-4 mb-2 mb-md-0"
                  >
                    Brussels, Belgium
                  </span>
                  <span
                    class="d-md-inline d-block text-muted mb-2 mb-md-0"
                  >
                    17 October 2019
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <a
      class="mt-3-5 d-block ps-3-5"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="ms-2-5 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with highlight listing item in 2 columns renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--highlight-2-col"
  >
    <h4
      class="fw-bold mb-4"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="gy-4-5 row row-cols-1 row-cols-md-2 g-2"
    >
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1002/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1003/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1004/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1005/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1006/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Text card with longer text which is supported 5
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1007/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
      </div>
    </div>
    <a
      class="mt-3-5 d-block"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="ms-2-5 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with highlight listing item in 3 columns renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--highlight-3-col"
  >
    <h4
      class="fw-bold mb-4"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="gy-4-5 row row-cols-1 row-cols-md-3 g-2"
    >
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1002/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1003/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1004/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1005/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1006/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Text card with longer text which is supported 5
            </p>
          </div>
        </div>
      </div>
      <div
        class="col"
      >
        <div
          class="listing-item--highlight border-0 bg-light h-100 rounded-2 card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1007/600/400"
          />
          <div
            class="card-body"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Text card with longer text which is supported 6
            </p>
          </div>
        </div>
      </div>
    </div>
    <a
      class="mt-3-5 d-block"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="ms-2-5 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;

exports[`OE - Listing with highlight listing item renders correctly 1`] = `
<jest>
  <div
    class="bcl-listing bcl-listing--highlight-1-col"
  >
    <h4
      class="fw-bold mb-4"
    >
      
    Listing item block title
  
    </h4>
    <div
      class="gy-4-5 row row-cols-1 g-2"
    >
      <div
        class="col mt-4-5"
      >
        <div
          class="listing-item--highlight border-0 bg-light card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1002/600/400"
          />
          <div
            class="card-body pb-4"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Text card with longer text which is supported 1
            </p>
          </div>
        </div>
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="listing-item--highlight border-0 bg-light card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1003/600/400"
          />
          <div
            class="card-body pb-4"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="listing-item--highlight border-0 bg-light card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1004/600/400"
          />
          <div
            class="card-body pb-4"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="listing-item--highlight border-0 bg-light card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1005/600/400"
          />
          <div
            class="card-body pb-4"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
          </div>
        </div>
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="listing-item--highlight border-0 bg-light card"
        >
          <img
            alt="alt img"
            class="card-img-top"
            src="https://picsum.photos/seed/1006/600/400"
          />
          <div
            class="card-body pb-4"
          >
            <h5
              class="card-title"
            >
              <a
                class="text-underline-hover"
                href="/example"
              >
                Card title
              </a>
            </h5>
            <p
              class="card-text mb-2"
            >
              Text card with longer text which is supported 5
            </p>
          </div>
        </div>
      </div>
      <div
        class="col mt-4-5"
      >
        <div
          class="listing-item--highlight border-0 bg-light card"
        >
          <img
            alt="alt img"
            class=""
            src="https://picsum.photos/seed/1007/600/400"
          />
          <div
            class="card-body pb-4"
          >
            <h5
              class="card-title"
            >
              Title card 6
            </h5>
            <p
              class="card-text mb-2"
            >
              Text card with longer text which is supported 6
            </p>
          </div>
          <img
            alt="alt img"
            class="card-img-bottom"
            src="https://picsum.photos/seed/1007/600/400"
          />
        </div>
      </div>
    </div>
    <a
      class="mt-3-5 d-block"
      href="/example"
    >
      Listing item block CTA
      <svg
        class="ms-2-5 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#chevron-right"
        />
      </svg>
    </a>
  </div>
</jest>
`;
